feat: use self method in mixins